--- a/server/app/static/index.html
+++ b/server/app/static/index.html
@@ -41,16 +41,16 @@
         .container {
             background-color: var(--bg-secondary);
             border-radius: var(--border-radius);
-            padding: 4rem; /* More padding */
+            padding: 4rem;
             box-shadow: var(--shadow-md);
-            max-width: 800px; /* Wider container */
+            max-width: 800px;
             width: 100%;
             text-align: center;
             border: 1px solid var(--border-color);
         }
 
         h1 {
-            font-size: 3rem; /* Larger heading */
+            font-size: 3rem;
             font-weight: 700;
             letter-spacing: -1px;
             margin-top: 0;
@@ -68,7 +68,8 @@
         }
 
         .store-buttons {
-            display: flex;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
             gap: 2rem;
             justify-content: center;
             margin-bottom: 3.5rem;
@@ -118,6 +119,14 @@
             background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 48 48" height="192" width="192"><defs><linearGradient id="a" x1="3.2173" y1="15" x2="44.7812" y2="15" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="%23d93025"/><stop offset="1" stop-color="%23ea4335"/></linearGradient><linearGradient id="b" x1="20.7219" y1="47.6791" x2="41.5039" y2="11.6837" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="%23fcc934"/><stop offset="1" stop-color="%23fbbc04"/></linearGradient><linearGradient id="c" x1="26.5981" y1="46.5015" x2="5.8161" y2="10.506" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="%231e8e3e"/><stop offset="1" stop-color="%2334a853"/></linearGradient></defs><circle cx="24" cy="23.9947" r="12" style="fill:%23fff"/><path d="M3.2154,36A24,24,0,1,0,12,3.2154,24,24,0,0,0,3.2154,36ZM34.3923,18A12,12,0,1,1,18,13.6077,12,12,0,0,1,34.3923,18Z" style="fill:none"/><path d="M24,12H44.7812a23.9939,23.9939,0,0,0-41.5639.0029L13.6079,30l.0093-.0024A11.9852,11.9852,0,0,1,24,12Z" style="fill:url(%23a)"/><circle cx="24" cy="24" r="9.5" style="fill:%231a73e8"/><path d="M34.3913,30.0029,24.0007,48A23.994,23.994,0,0,0,44.78,12.0031H23.9989l-.0025.0093A11.985,11.985,0,0,1,34.3913,30.0029Z" style="fill:url(%23b)"/><path d="M13.6086,30.0031,3.218,12.006A23.994,23.994,0,0,0,24.0025,48L34.3931,30.0029l-.0067-.0068a11.9852,11.9852,0,0,1-20.7778.007Z" style="fill:url(%23c)"/></svg>');
         }
 
+        .logo-android {
+            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="nonzero" viewBox="0 0 466 511.98"><path fill="%23ea4335" d="M199.9 237.8L1.4 470.17c7.22 24.57 30.16 41.81 55.8 41.81 11.16 0 20.93-2.79 29.3-8.37h0l244.16-139.46L199.9 237.8z"/><path fill="%23fbbc04" d="M433.91 205.1h0l-104.65-60-111.61 110.22 113.01 108.83 104.64-58.6c18.14-9.77 30.7-29.3 30.7-50.23-1.4-20.93-13.95-40.46-32.09-50.22z"/><path fill="%2334a853" d="M199.42 273.45L329.27 145.1 87.9 8.37C79.53 2.79 68.36 0 57.2 0 30.7 0 6.98 18.14 1.4 41.86l198.02 231.59z"/><path fill="%234285f4" d="M1.39 41.86C0 46.04 0 51.63 0 57.2v397.64c0 5.57 0 9.76 1.4 15.34l216.27-214.86L1.39 41.86z"/></svg>');
+        }
+
+        .logo-ios {
+            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 800"><linearGradient id="A" gradientUnits="userSpaceOnUse" x1="400.05" y1="0" x2="400.05" y2="800"><stop offset="0" stop-color="%2318bffb"/><stop offset="1" stop-color="%232072f3"/></linearGradient><path fill="url(%23A)" d="M638.4 0H161.6C72.3 0 0 72.3 0 161.6v476.9C0 727.7 72.3 800 161.6 800h476.9c89.2 0 161.6-72.3 161.6-161.6V161.6C800 72.3 727.7 0 638.4 0z"/><path fill="%23fff" d="M396.6 183.8l16.2-28c10-17.5 32.3-23.4 49.8-13.4s23.4 32.3 13.4 49.8L319.9 462.4h112.9c36.6 0 57.1 43 41.2 72.8H143c-20.2 0-36.4-16.2-36.4-36.4s16.2-36.4 36.4-36.4h92.8l118.8-205.9-37.1-64.4c-10-17.5-4.1-39.6 13.4-49.8 17.5-10 39.6-4.1 49.8 13.4l15.9 28.1h0zM256.2 572.7l-35 60.7c-10 17.5-32.3 23.4-49.8 13.4S148 614.5 158 597l26-45c29.4-9.1 53.3-2.1 72.2 20.7h0zm301.4-110.1h94.7c20.2 0 36.4 16.2 36.4 36.4s-16.2 36.4-36.4 36.4h-52.6l35.5 61.6c10 17.5 4.1 39.6-13.4 49.8-17.5 10-39.6 4.1-49.8-13.4l-134.5-233c-30.5-52.6-8.7-105.4 12.8-123.3l107.3 185.5h0z"/></svg>');
+        }
+
         @media (max-width: 768px) {
             body {
                 padding: 1rem;
@@ -132,7 +141,7 @@
                 font-size: 1rem;
             }
             .store-buttons {
-                flex-direction: column;
+                grid-template-columns: 1fr;
             }
             .logo {
                 width: 128px;
@@ -143,9 +152,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Get the SealSkin Extension</h1>
+        <h1>Get the SealSkin Client</h1>
         <p>
-            Install the browser extension from your preferred store.
+            Install the client from your preferred store.
         </p>
         <div class="store-buttons">
             <a href="https://chromewebstore.google.com/detail/sealskin-isolation/lclgfmnljgacfdpmmmjmfpdelndbbfhk" class="store-button">
@@ -155,6 +164,14 @@
             <a href="https://addons.mozilla.org/en-US/firefox/addon/sealskin-isolation/" class="store-button">
                 <span class="logo logo-firefox"></span>
                 <span>Firefox Add-ons</span>
+            </a>
+            <a href="https://play.google.com/store/apps/details?id=io.linuxserver.sealskin" class="store-button">
+                <span class="logo logo-android"></span>
+                <span>Play Store</span>
+            </a>
+            <a href="https://apps.apple.com/us/app/sealskin/id6758210210" class="store-button">
+                <span class="logo logo-ios"></span>
+                <span>App Store</span>
             </a>
         </div>
     </div>
